# Infomates-ugr

./: .gitignore  README.md
AC/Seminario0/Cuaderno/: HelloOMP
Administracion_git/: comprobador.sh  crontab_git  pull.sh  pull_error.txt  pull_ok.txt  pullerror.txt  pullok.txt  push.sh  push_error.txt  push_ok.txt
Cuarto_Curso/Primer_Cuatri/DDSI/: sem1.txt
Cuarto_Curso/Primer_Cuatri/IG/: .~lock.grafo.odt#  grafo.odt  grafo_cpy.odt  p2_entrega.odt
Cuarto_Curso/Primer_Cuatri/Topologia_II/: :  portada.aux  portada.tex  referencias.bib  trabajoT3.aux  trabajoT3.bbl  trabajoT3.bcf  trabajoT3.blg  trabajoT3.run.xml
Cuarto_Curso/Segundo_Cuatri/Administracion_Bases_Datos/: Seminario_1_1
Cuarto_Curso/Segundo_Cuatri/Curvas_y_Superficies/: +  Apuntes.fdb_latexmk  Apuntes.fls
EC/: Preguntas.md
EC/Bomba_Digital/: bomba_prueba
EC/Bomba_Digital/Mis_Bombas/: bombaPrimos
EC/EjercicioASM/: Estadisticus.s
EC/Practica1/: hola  hola-c  hola64  hola_global  holanini  minimo1
EC/Practica2/ProgInvest/: proginvest  sumalistas
EC/Practica2/ejercicio1/: sum  sum.s
EC/Practica2/ejercicio3/: msum.c
EC/Practica2/ejercicio4/: saludo
EC/Practica2/ejercicio5/: mediaconsigno  mediasinsigno  sumaconsigno  sumaconsigno.s  sumasinsigno  sumasinsigno2
EC/Practica3/: ejercicio2  ejercicio2.s  suma  suma04  suma_03_SC_c.c
EC/Practica3/Ejercicio6/: suma06  suma_06_C.c
EC/Practica3/Ejercicio7/: suma07  suma_07_C.c
EC/Practica5/: line  line.cc  prueba  size  size.cc
Primer_Cuatri/ED/: crontab_git  pull.sh  push.sh  push_error.txt  push_ok.txt
Primer_Cuatri/ED/Practicas/Practica_Set_Map/: CMakeLists.txt
Primer_Cuatri/ED/Practicas/Practica_Set_Map/Dictionary/include/: Dictionary_multi.h
Primer_Cuatri/ED/Practicas/Practica_Set_Map/Dictionary/src/: Dictionary.cpp  Dictionary_multi.cpp
Quinto_Curso/TFG/: PropuestaRellena.ods
SO/Examen/20-21/: du
SO/Programacion/: compiler.sh
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/: CMakeCache.txt  CMakeLists.txt  Doxyfile.in  pruebapegado  pruebarotacion
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/datos/: paises.txt
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/datos/imagenes/OurResults/: avion1_66gr.ppm  avion3_66gr.ppm
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/rutas_aereas/doc/html/: Almacen_8h_source.html  Imagen_8h_source.html  Pais_8h_source.html  Ruta_8h_source.html  annotated.html  classAlmacen-members.html  classAlmacen.html  classAlmacen_1_1const__iterator-members.html  classAlmacen_1_1iterator.html  classImagen-members.html  classImagen.html  classMundo-members.html  classMundo.html  classMundo_1_1const__iterator-members.html  classMundo_1_1const__iterator.html  classMundo_1_1iterator-members.html  classMundo_1_1iterator.html  classPunto-members.html  classPunto.html  classRuta-members.html  classRuta_1_1const__iterator-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_99a846cfddeb688341ec01d5a782e057_dep.dot  dir_a3eb7bf00e161954cd18095a53f16466.html  files.html  functions.html  functions_func.html  globals_enum.html  globals_func.html  imagenES_8cpp.html  imagenES_8cpp__incl.dot  imagenES_8h.html  imagenES_8h_source.html  menudata.js  structPixel.html
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/rutas_aereas/doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  functions_f.js
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/rutas_aereas/include/: Imagen.h  Mundo.h  Pais.h
Segundo_Curso/Primer_Cuatri/ED/Practicas/Rutas_Aereas/rutas_aereas/src/: Almacen.cpp  Imagen.cpp  pruebapegado.cpp  pruebarotacion.cpp  ruta_aerea.cpp
TFG/Información_Preliminar/: GeneralTDA.html
Tercer_Curso/Segundo_Cuatri/: Test1.md  index.html  tests.md
(+1483 files in other folders)
